fix release scripts naming

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "lint": "nx run-many --target=lint --all --exclude=angular-components",
     "ng": "nx",
     "nx": "nx",
-    "prerelease:angular": "node scripts/pre-angular-release.js",
-    "release:angular": "npx standard-version -an",
+    "prerelease": "node scripts/pre-angular-release.js",
+    "release": "npx standard-version -an",
     "start": "ng serve",
     "pretest": "rimraf ./coverage ./testresults",
     "test": "ng test",
