--- a/nx.json
+++ b/nx.json
@@ -8,7 +8,7 @@
     "tsconfig.base.json": "*"
   },
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "main"
   },
   "tasksRunnerOptions": {
     "default": {
