--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "affected:libs": "nx affected:libs",
     "affected:lint": "nx affected:lint",
     "affected:test": "nx affected:test",
-    "postaffected:test": "node ./scripts/jest-join-coverage.js",
     "build": "nx build",
     "build:devkit": "tsc -p ./tools/devkit/tsconfig.devkit.json && cpx -v \"./tools/devkit/**/*.json\" dist/tools/devkit",
     "build:theme": "nx build angular-theme --prod",
@@ -44,9 +43,10 @@
     "release": "npx standard-version -an",
     "start": "nx serve",
     "pretest": "rimraf ./coverage ./testresults",
-    "test": "nx test",
-    "posttest": "node ./scripts/jest-join-coverage.js",
-    "testjest": "jest",
+    "test": "jest",
+    "test:cov": "nx run-many --target=test --all --parallel --maxWorkers=1",
+    "pretest:cov": "rimraf ./coverage ./testresults",
+    "posttest:cov": "node ./scripts/jest-join-coverage.js",
     "update": "nx migrate latest",
     "update:check": "nx update",
     "add": "npm install --package-lock-only --no-package-lock --prefix",
@@ -131,7 +131,7 @@
     "istanbul-api": "^3.0.0",
     "istanbul-lib-coverage": "^3.0.0",
     "jest": "29.5.0",
-    "jest-canvas-mock": "2.3.1",
+    "jest-canvas-mock": "2.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-junit": "16.0.0",
     "jest-preset-angular": "13.0.1",
