--- a/libs/angular-components/package.json
+++ b/libs/angular-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@finastra/angular-components",
-  "version": "3.11.2",
+  "version": "4.0.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/finastra/finastra-design-system.git",
@@ -18,6 +18,6 @@
     "ts-md5": "^1.2.8"
   },
   "dependencies": {
-    "@finastra/angular-theme": "3.11.2"
+    "@finastra/angular-theme": "4.0.0-alpha.0"
   }
 }
