--- a/.github/workflows/pr-build-ng.yml
+++ b/.github/workflows/pr-build-ng.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: 'angular-theme'
-          path: './themes/angular-theme'
+          path: './libs/angular-theme'
       - name: Upload Angular Components Artifact
         uses: actions/upload-artifact@v1.0.0
         with:
