--- a/.github/workflows/release-ng.yml
+++ b/.github/workflows/release-ng.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: 'angular-theme'
-          path: './themes/angular-theme'
+          path: './libs/angular-theme'
       - name: Upload Angular Components Artifact
         uses: actions/upload-artifact@v2
         with:
@@ -98,7 +98,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: 'angular-theme'
-          path: './themes/angular-theme'
+          path: './libs/angular-theme'
       - uses: actions/download-artifact@v2
         with:
           name: 'angular-components'
@@ -113,7 +113,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.FINASTRA_BOT_NPM_AUTH_TOKEN }}
-          package: ./themes/angular-theme/package.json
+          package: ./libs/angular-theme/package.json
           access: public
 
   deploy:
