--- a/libs/angular-theme/package.json
+++ b/libs/angular-theme/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/finastra/finastra-design-system.git",
-    "directory": "themes/angular-theme"
+    "directory": "libs/angular-theme"
   },
   "dependencies": {
     "@finastra/fds-tokens": "1.7.0",
