--- a/.github/workflows/release-ng.yml
+++ b/.github/workflows/release-ng.yml
@@ -58,17 +58,17 @@ jobs:
       - name: Build Angular Components
         run: npm run build angular-components
       - name: Upload Angular Theme Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: 'angular-theme'
           path: './libs/angular-theme'
       - name: Upload Angular Components Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: 'angular-components'
           path: './dist/libs/angular-components'
       - name: Upload Angular Test App Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: 'angular-app'
           path: './dist/apps/angular-test-app'
@@ -79,7 +79,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -92,24 +92,24 @@ jobs:
 
   publish:
     needs: build
-    name: Publish to NPM
+    name: Publish artifacts to NPM
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: 'angular-theme'
           path: './libs/angular-theme'
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: 'angular-components'
           path: './dist/libs/angular-components'
-      - name: Publish Components
+      - name: Publish Angular Components
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.FINASTRA_BOT_NPM_AUTH_TOKEN }}
           package: ./dist/libs/angular-components/package.json
           access: public
-      - name: Publish angular theme
+      - name: Publish Angular Theme
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.FINASTRA_BOT_NPM_AUTH_TOKEN }}
@@ -118,10 +118,10 @@ jobs:
 
   deploy:
     needs: build
-    name: Deploy angular app to Netlify
+    name: Deploy angular-test-app to Netlify
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: 'angular-app'
           path: './dist/apps/angular-test-app'
