--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
@@ -48,7 +49,8 @@
       "@finastra/angular-components/vector-map": ["libs/angular-components/vector-map"],
       "@finastra/angular-components/video-thumbnail": ["libs/angular-components/video-thumbnail"],
       "@finastra/angular-components/wizard": ["libs/angular-components/wizard"],
-      "@finastra/devkit": ["dist/devkit/"]
+      "@finastra/devkit": ["dist/devkit/"],
+      "@env/*": ["apps/angular-test-app/src/environments/*"]
     }
   },
   "angularCompilerOptions": {
