--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@finastra/fds-angular",
-  "version": "4.0.0-alpha.3",
+  "version": "4.0.0",
   "private": true,
   "repository": {
     "type": "git",
