--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -26,11 +26,11 @@ _.svg @dorsaffrigui @ttalbot
 
 # Per components owners
 
-/libs/angular-components/global-search/ @rbordeanu
-/libs/angular-components/scroll-to-top/ @rbordeanu
+/libs/angular-components/global-search/
+/libs/angular-components/scroll-to-top/
 /libs/angular-components/table/ @Ping-YUAN
-/libs/angular-components/popover/ @rbordeanu
+/libs/angular-components/popover/
 /libs/angular-components/repeater/ @xmonvoisin
-/libs/angular-components/filter/filter-tree/ @Pi5rr5
-/libs/angular-components/vector-map/ @rbordeanu
-/libs/angular-components/wizard/ @rbordeanu
+/libs/angular-components/filter/filter-tree/
+/libs/angular-components/vector-map/
+/libs/angular-components/wizard/
