feat: update angular to version 17
downgrade globby to version 11.0.4, copy .js and .cjs files for devkit
build, remove dist property from schema, replace chars with symbols,
replace cpx with copyfiles, avatar component md5 hash update

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 *.sublime-workspace
 .angular
 # IDE - VSCode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -44,6 +45,7 @@ finastra-design-system.iml
 Thumbs.db
 
 libs/angular-theme/prebuilt-theme
+libs/angular-components/dist
 
 # build
 **/coverage
