--- a/libs/angular-components/package.json
+++ b/libs/angular-components/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@finastra/angular-components",
-  "version": "4.1.1",
+  "version": "4.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/finastra/finastra-design-system.git",
     "directory": "libs/angular-components"
   },
   "peerDependencies": {
-    "@angular/common": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/forms": "^15.2.8",
-    "@angular/cdk": "^15.2.8",
+    "@angular/common": "^17.3.9",
+    "@angular/core": "^17.3.9",
+    "@angular/forms": "^17.3.9",
+    "@angular/cdk": "^17.3.9",
     "lodash-es": "^4.17.21",
     "angular-plotly.js": "^5.2.2",
-    "plotly.js": "^2.27.0",
-    "smoothscroll-polyfill": "0.4.4",
-    "ts-md5": "^1.2.8"
+    "plotly.js": "^1.47.4",
+    "smoothscroll-polyfill": "^0.4.4",
+    "ts-md5": "^1.3.1"
   },
   "dependencies": {
-    "@finastra/angular-theme": "4.1.1"
+    "@finastra/angular-theme": "4.2.0"
   }
 }
