theme building update
dependecies update, changed paths for theme library building,
theme-builder updates (glob search scss files, postcss processing
update), nodenext module resolution for globby import

--- a/libs/angular-theme/project.json
+++ b/libs/angular-theme/project.json
@@ -8,7 +8,7 @@
     "build": {
       "executor": "./dist/tools/devkit:theme-builder",
       "options": {
-        "inputPath": "libs/angular-theme/lib/",
+        "inputPath": "libs/angular-theme/lib/prebuilt-theme",
         "outputPath": "libs/angular-theme/prebuilt-theme",
         "assets": ["libs/angular-theme/lib", "libs/angular-theme/assets", "libs/angular-theme/*.scss"],
         "sourceMap": true
