--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "affected:test": "nx affected:test",
     "build": "nx build",
     "build:devkit": "tsc -p ./tools/devkit/tsconfig.devkit.json && npx copyfiles -u 2 \"./tools/devkit/**/*.{json,js,cjs}\" dist/tools/devkit",
-    "build:theme": "nx build angular-theme --prod",
+    "build:theme": "nx build angular-theme --prod && cd libs/angular-theme/prebuilt-theme && npm pack",
     "build:scripts": "tsc --project scripts/tsconfig.json",
     "pack:components": "nx run angular-components:build:production && npx copyfiles -u 3 \"libs/angular-components/dist/**/*\" dist/libs/angular-components && cd dist/libs/angular-components && npm pack",
     "changelog:components": "cd libs/angular-components && npx standard-version",
@@ -127,6 +127,8 @@
     "jest": "29.7.0",
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.7.0",
+    "istanbul-api": "^3.0.0",
+    "istanbul-lib-coverage": "^3.0.0",
     "jest-junit": "16.0.0",
     "jest-preset-angular": "14.1.0",
     "jsonc-parser": "^3.2.1",
