--- a/libs/angular-components/package.json
+++ b/libs/angular-components/package.json
@@ -10,12 +10,7 @@
     "@angular/common": "^17.3.9",
     "@angular/core": "^17.3.9",
     "@angular/forms": "^17.3.9",
-    "@angular/cdk": "^17.3.9",
-    "lodash-es": "^4.17.21",
-    "angular-plotly.js": "^5.2.2",
-    "plotly.js": "^1.47.4",
-    "smoothscroll-polyfill": "^0.4.4",
-    "ts-md5": "^1.3.1"
+    "@angular/cdk": "^17.3.9"
   },
   "dependencies": {
     "@finastra/angular-theme": "4.2.0"
