--- a/tools/devkit/tsconfig.devkit.json
+++ b/tools/devkit/tsconfig.devkit.json
@@ -7,7 +7,5 @@
     "moduleResolution": "NodeNext",
     "module": "NodeNext"
   },
-  "include": [
-    "**/*.ts"
-  ]
+  "include": ["**/*.ts"]
 }
