--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:devkit": "tsc -p ./tools/devkit/tsconfig.devkit.json && npx copyfiles -u 2 \"./tools/devkit/**/*.{json,js,cjs}\" dist/tools/devkit",
     "build:theme": "nx build angular-theme --prod && cd libs/angular-theme/prebuilt-theme && npm pack",
     "build:scripts": "tsc --project scripts/tsconfig.json",
-    "pack:components": "nx run angular-components:build:production && npx copyfiles -u 3 \"libs/angular-components/dist/**/*\" dist/libs/angular-components && cd dist/libs/angular-components && npm pack",
+    "pack:components": "nx run angular-components:build:production && cd dist/libs/angular-components && npm pack",
     "changelog:components": "cd libs/angular-components && npx standard-version",
     "changelog:theme": "cd libs/angular-theme && npx standard-version",
     "clean": "rimraf dist coverage junit.xml",
@@ -89,11 +89,9 @@
     "@angular/platform-browser-dynamic": "^17.3.9",
     "@angular/router": "^17.3.9",
     "@nrwl/angular": "19.0.5",
-    "@nrwl/cli": "15.9.3",
     "@nrwl/devkit": "19.0.5",
     "@nrwl/eslint-plugin-nx": "18.3.3",
     "@nrwl/jest": "19.0.5",
-    "@nrwl/nx-cloud": "19.0.0",
     "@nrwl/workspace": "19.0.5",
     "@schematics/angular": "^17.3.7",
     "@types/command-line-args": "^5.2.3",
