--- a/libs/angular-components/changelog/project.json
+++ b/libs/angular-components/changelog/project.json
@@ -4,6 +4,12 @@
   "projectType": "library",
   "sourceRoot": "libs/angular-components/changelog",
   "prefix": "finastra",
+  "tags": [],
+  "generators": {
+    "@nrwl/angular:component": {
+      "styleext": "scss"
+    }
+  },
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
@@ -11,11 +17,5 @@
         "lintFilePatterns": ["libs/angular-components/changelog/src/**/*.ts", "libs/angular-components/changelog/src/**/*.html"]
       }
     }
-  },
-  "generators": {
-    "@nrwl/angular:component": {
-      "styleext": "scss"
-    }
-  },
-  "tags": []
+  }
 }
