--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "affected:test": "nx affected:test",
     "build": "nx build",
     "build:devkit": "tsc -p ./tools/devkit/tsconfig.devkit.json && npx copyfiles -u 2 \"./tools/devkit/**/*.{json,js,cjs}\" dist/tools/devkit",
-    "build:theme": "nx build angular-theme --prod && cd libs/angular-theme/prebuilt-theme && npm pack",
+    "build:theme": "nx build angular-theme --prod && cd libs/angular-theme/prebuilt-theme",
+    "pack:theme": "npm run build:theme && npm pack",
     "build:scripts": "tsc --project scripts/tsconfig.json",
     "pack:components": "nx run angular-components:build:production && cd dist/libs/angular-components && npm pack",
     "changelog:components": "cd libs/angular-components && npx standard-version",
@@ -65,105 +66,109 @@
       "nx affected:lint --uncommitted --parallel --fix=true"
     ]
   },
+  "dependencies": {
+    "@angular/animations": "17.3.9",
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/forms": "17.3.9",
+    "@angular/material": "17.3.9",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@nx/angular": "19.0.5",
+    "@finastra/fds-theme": "1.8.1",
+    "@finastra/fds-tokens": "1.8.1",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "zone.js": "0.14.6"
+  },
   "devDependencies": {
-    "@actions/core": "^1.10.1",
-    "@angular-builders/custom-webpack": "^17.0.2",
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular-devkit/core": "^17.3.7",
-    "@angular-devkit/schematics": "^17.3.7",
-    "@angular-eslint/eslint-plugin": "^16.3.1",
-    "@angular-eslint/eslint-plugin-template": "^16.3.1",
-    "@angular-eslint/template-parser": "^16.3.1",
-    "@angular/animations": "^17.3.9",
-    "@angular/cdk": "^17.3.9",
-    "@angular/cdk-experimental": "^17.3.9",
-    "@angular/cli": "^17.3.7",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/compiler-cli": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/forms": "^17.3.9",
-    "@angular/language-service": "^17.3.9",
-    "@angular/material": "^17.3.9",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
-    "@angular/router": "^17.3.9",
-    "@nrwl/angular": "19.0.5",
-    "@nrwl/devkit": "19.0.5",
-    "@nrwl/eslint-plugin-nx": "18.3.3",
-    "@nrwl/jest": "19.0.5",
-    "@nrwl/workspace": "19.0.5",
-    "@schematics/angular": "^17.3.7",
-    "@types/command-line-args": "^5.2.3",
+    "@actions/core": "1.10.1",
+    "@angular-builders/custom-webpack": "17.0.2",
+    "@angular-devkit/build-angular": "17.3.7",
+    "@angular-devkit/core": "17.3.7",
+    "@angular-devkit/schematics": "17.3.7",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
+    "@angular/cdk": "17.3.9",
+    "@angular/cdk-experimental": "17.3.9",
+    "@angular/cli": "17.3.7",
+    "@angular/compiler-cli": "17.3.9",
+    "@angular/language-service": "17.3.9",
+    "@nx/devkit": "19.0.5",
+    "@nx/eslint-plugin": "19.0.5",
+    "@nx/jest": "19.0.5",
+    "@nx/workspace": "19.0.5",
+    "@schematics/angular": "17.3.7",
+    "@types/command-line-args": "5.2.3",
     "@types/d3": "7.4.3",
-    "@types/fs-extra": "^11.0.4",
-    "@types/git-config-path": "^2.0.4",
+    "@types/fs-extra": "11.0.4",
+    "@types/git-config-path": "2.0.4",
     "@types/jest": "29.5.12",
-    "@types/lodash-es": "^4.17.12",
+    "@types/lodash-es": "4.17.12",
     "@types/node": "20.12.12",
     "@types/parse-git-config": "3.0.4",
     "@types/smoothscroll-polyfill": "0.3.4",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
-    "acorn": "^8.11.3",
-    "angular-plotly.js": "^5.2.2",
-    "autoprefixer": "^10.4.19",
-    "command-line-args": "^5.2.1",
-    "commander": "^12.1.0",
-    "concurrently": "^8.2.2",
+    "acorn": "8.11.3",
+    "angular-plotly.js": "5.2.2",
+    "autoprefixer": "10.4.19",
+    "command-line-args": "5.2.1",
+    "commander": "12.1.0",
+    "concurrently": "8.2.2",
     "core-js": "3.37.1",
     "d3": "7.9.0",
     "dotenv": "16.4.5",
     "elasticlunr": "git://github.com/weixsong/elasticlunr.js.git#f773890392760e0b3c68f0e65dbacb396dff297f",
     "es-abstract": "1.23.3",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "fs-extra": "^11.2.0",
-    "git-config-path": "^2.0.0",
-    "globby": "^14.0.1",
-    "husky": "^9.0.11",
+    "eslint": "8.0.0",
+    "eslint-config-prettier": "9.0.0",
+    "fs-extra": "11.2.0",
+    "git-config-path": "2.0.0",
+    "globby": "14.0.1",
+    "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.7.0",
-    "istanbul-api": "^3.0.0",
-    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-api": "3.0.0",
+    "istanbul-lib-coverage": "3.0.0",
     "jest-junit": "16.0.0",
     "jest-preset-angular": "14.1.0",
-    "jsonc-parser": "^3.2.1",
-    "lint-staged": "^15.2.4",
+    "jsonc-parser": "3.2.1",
+    "lint-staged": "15.2.4",
     "lit-html": "3.1.3",
-    "lodash-es": "^4.17.21",
+    "lodash-es": "4.17.21",
     "ng-packagr": "17.3.0",
-    "ngx-color": "^9.0.0",
-    "node-sass-import": "^2.0.1",
+    "ngx-color": "9.0.0",
+    "node-sass-import": "2.0.1",
     "node-watch": "0.7.4",
     "nx": "19.0.5",
-    "ora": "^8.0.1",
-    "parse-git-config": "^3.0.0",
-    "plotly.js": "^2.32.0",
-    "postcss": "^8.4.38",
+    "ora": "8.0.1",
+    "parse-git-config": "3.0.0",
+    "plotly.js": "2.32.0",
+    "postcss": "8.4.38",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "9.5.13",
     "postcss-url": "10.1.3",
     "prettier": "3.2.5",
-    "rimraf": "^5.0.7",
-    "rxjs": "~7.8.1",
-    "sass": "^1.77.2",
-    "semver": "^7.6.2",
-    "sinon": "^18.0.0",
-    "smoothscroll-polyfill": "^0.4.4",
-    "standard-version": "^9.5.0",
-    "stylelint": "^16.5.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-formatter-pretty": "^4.0.0",
-    "stylelint-scss": "^6.3.0",
-    "tiny-glob": "^0.2.9",
+    "rimraf": "5.0.7",
+    "sass": "1.77.2",
+    "semver": "7.6.2",
+    "sinon": "18.0.0",
+    "smoothscroll-polyfill": "0.4.4",
+    "standard-version": "9.5.0",
+    "stylelint": "16.5.0",
+    "stylelint-config-standard": "36.0.0",
+    "stylelint-formatter-pretty": "4.0.0",
+    "stylelint-scss": "6.3.0",
+    "tiny-glob": "0.2.9",
     "ts-jest": "29.1.3",
     "ts-md5": "1.3.1",
     "ts-node": "10.9.2",
-    "tslib": "^2.6.2",
-    "typescript": "5.4.5",
-    "zone.js": "0.14.6"
+    "typescript": "5.4.5"
   },
   "engines": {
     "node": "^18",
@@ -172,9 +177,5 @@
   "volta": {
     "node": "18.10.0",
     "npm": "9.5.0"
-  },
-  "dependencies": {
-    "@finastra/fds-theme": "^1.8.1",
-    "@finastra/fds-tokens": "^1.8.1"
   }
 }
