--- a/tools/devkit/package.json
+++ b/tools/devkit/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "builders": "./builders.json",
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1703.8",
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular-devkit/core": "^17.3.8",
-    "@angular-devkit/schematics": "^17.3.8",
+    "@angular-devkit/architect": "0.1703.8",
+    "@angular-devkit/build-angular": "17.3.8",
+    "@angular-devkit/core": "17.3.8",
+    "@angular-devkit/schematics": "17.3.8",
     "globby": "11.0.4",
     "typescript": "5.4.5"
   }
