--- a/package.json
+++ b/package.json
@@ -66,23 +66,6 @@
       "nx affected:lint --uncommitted --parallel --fix=true"
     ]
   },
-  "dependencies": {
-    "@angular/animations": "17.3.9",
-    "@angular/common": "17.3.9",
-    "@angular/compiler": "17.3.9",
-    "@angular/core": "17.3.9",
-    "@angular/forms": "17.3.9",
-    "@angular/material": "17.3.9",
-    "@angular/platform-browser": "17.3.9",
-    "@angular/platform-browser-dynamic": "17.3.9",
-    "@angular/router": "17.3.9",
-    "@nx/angular": "19.0.5",
-    "@finastra/fds-theme": "1.8.1",
-    "@finastra/fds-tokens": "1.8.1",
-    "rxjs": "7.8.1",
-    "tslib": "2.6.2",
-    "zone.js": "0.14.6"
-  },
   "devDependencies": {
     "@actions/core": "1.10.1",
     "@angular-builders/custom-webpack": "17.0.2",
@@ -92,11 +75,23 @@
     "@angular-eslint/eslint-plugin": "16.3.1",
     "@angular-eslint/eslint-plugin-template": "16.3.1",
     "@angular-eslint/template-parser": "16.3.1",
+    "@angular/animations": "17.3.9",
     "@angular/cdk": "17.3.9",
     "@angular/cdk-experimental": "17.3.9",
     "@angular/cli": "17.3.7",
+    "@angular/common": "17.3.9",
+    "@angular/compiler": "17.3.9",
     "@angular/compiler-cli": "17.3.9",
+    "@angular/core": "17.3.9",
+    "@angular/forms": "17.3.9",
     "@angular/language-service": "17.3.9",
+    "@angular/material": "17.3.9",
+    "@angular/platform-browser": "17.3.9",
+    "@angular/platform-browser-dynamic": "17.3.9",
+    "@angular/router": "17.3.9",
+    "@finastra/fds-theme": "1.8.1",
+    "@finastra/fds-tokens": "1.8.1",
+    "@nx/angular": "19.0.5",
     "@nx/devkit": "19.0.5",
     "@nx/eslint-plugin": "19.0.5",
     "@nx/jest": "19.0.5",
@@ -130,11 +125,11 @@
     "git-config-path": "2.0.0",
     "globby": "14.0.1",
     "husky": "9.0.11",
+    "istanbul-api": "3.0.0",
+    "istanbul-lib-coverage": "3.0.0",
     "jest": "29.7.0",
     "jest-canvas-mock": "2.5.2",
     "jest-environment-jsdom": "29.7.0",
-    "istanbul-api": "3.0.0",
-    "istanbul-lib-coverage": "3.0.0",
     "jest-junit": "16.0.0",
     "jest-preset-angular": "14.1.0",
     "jsonc-parser": "3.2.1",
@@ -155,6 +150,7 @@
     "postcss-url": "10.1.3",
     "prettier": "3.2.5",
     "rimraf": "5.0.7",
+    "rxjs": "7.8.1",
     "sass": "1.77.2",
     "semver": "7.6.2",
     "sinon": "18.0.0",
@@ -168,7 +164,9 @@
     "ts-jest": "29.1.3",
     "ts-md5": "1.3.1",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5"
+    "tslib": "2.6.2",
+    "typescript": "5.4.5",
+    "zone.js": "0.14.6"
   },
   "engines": {
     "node": "^18",
