--- a/.github/workflows/pr-build-ng.yml
+++ b/.github/workflows/pr-build-ng.yml
@@ -9,10 +9,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
       - name: Get npm cache directory
         id: npm-cache-dir
         run: |
@@ -60,21 +60,21 @@ jobs:
       - name: Upload Angular Theme Artifact
         uses: actions/upload-artifact@v1.0.0
         with:
-          name: 'angular-theme'
-          path: './libs/angular-theme'
+          name: "angular-theme"
+          path: "./libs/angular-theme"
       - name: Upload Angular Components Artifact
         uses: actions/upload-artifact@v1.0.0
         with:
-          name: 'angular-components'
-          path: './dist/libs/angular-components'
+          name: "angular-components"
+          path: "./dist/libs/angular-components"
         # Deploy
       - name: Deploy angular-test-app to Netlify
         uses: nwtgck/actions-netlify@v1.1
         with:
-          publish-dir: './dist/apps/angular-test-app'
+          publish-dir: "./dist/apps/angular-test-app"
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: 'Deploy angular app from GitHub Actions'
+          deploy-message: "Deploy angular app from GitHub Actions"
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
