--- a/.github/workflows/pr-build-ng.yml
+++ b/.github/workflows/pr-build-ng.yml
@@ -60,21 +60,21 @@ jobs:
       - name: Upload Angular Theme Artifact
         uses: actions/upload-artifact@v1.0.0
         with:
-          name: "angular-theme"
-          path: "./libs/angular-theme"
+          name: 'angular-theme'
+          path: './libs/angular-theme'
       - name: Upload Angular Components Artifact
         uses: actions/upload-artifact@v1.0.0
         with:
-          name: "angular-components"
-          path: "./dist/libs/angular-components"
+          name: 'angular-components'
+          path: './dist/libs/angular-components'
         # Deploy
       - name: Deploy angular-test-app to Netlify
         uses: nwtgck/actions-netlify@v1.1
         with:
-          publish-dir: "./dist/apps/angular-test-app"
+          publish-dir: './dist/apps/angular-test-app'
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy angular app from GitHub Actions"
+          deploy-message: 'Deploy angular app from GitHub Actions'
           enable-pull-request-comment: false
           enable-commit-comment: true
           overwrites-pull-request-comment: true
