--- a/libs/angular-components/vector-map/project.json
+++ b/libs/angular-components/vector-map/project.json
@@ -14,15 +14,21 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["libs/angular-components/vector-map/src/**/*.ts", "libs/angular-components/vector-map/src/**/*.html"]
+        "lintFilePatterns": [
+          "libs/angular-components/vector-map/src/**/*.ts",
+          "libs/angular-components/vector-map/src/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "options": {
-        "jestConfig": "libs/angular-components/vector-map/jest.config.ts"
+        "jestConfig": "libs/angular-components/vector-map/jest.config.ts",
+        "tsConfig": "libs/angular-components/vector-map/tsconfig.spec.json"
       },
-      "outputs": ["{workspaceRoot}/coverage/libs/angular-components/vector-map"]
+      "outputs": [
+        "{workspaceRoot}/coverage/libs/angular-components/vector-map"
+      ]
     }
   }
 }
