--- a/libs/angular-components/breadcrumb/project.json
+++ b/libs/angular-components/breadcrumb/project.json
@@ -14,7 +14,10 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["libs/angular-components/breadcrumb/src/**/*.ts", "libs/angular-components/breadcrumb/src/**/*.html"]
+        "lintFilePatterns": [
+          "libs/angular-components/breadcrumb/src/**/*.ts",
+          "libs/angular-components/breadcrumb/src/**/*.html"
+        ]
       }
     }
   }
