--- a/libs/angular-theme/project.json
+++ b/libs/angular-theme/project.json
@@ -16,8 +16,13 @@
       "options": {
         "inputPath": "libs/angular-theme/lib/prebuilt-theme",
         "outputPath": "libs/angular-theme/prebuilt-theme",
-        "assets": ["libs/angular-theme/lib", "libs/angular-theme/assets", "libs/angular-theme/*.scss"],
-        "sourceMap": true
+        "assets": [
+          "libs/angular-theme/lib",
+          "libs/angular-theme/assets",
+          "libs/angular-theme/*.scss"
+        ],
+        "sourceMap": true,
+        "tsConfig": "libs/angular-theme/tsconfig.lib.json"
       },
       "configurations": {
         "production": {
